[tool.poetry]
name = "find-similar-behaviour-vehicles"
version = "0.1.0"
description = "Finding vehicles with similar behaviour from two specialised driving history datasets."
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.3"
joblib = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
